@@ -39,8 +39,10 @@ a img {
 
 <DT>XXXX-XX-XX
 <DD>
-<UL>sequent history accessible in external sequent node windows
-<LI>
+<UL>
+<LI>sequent history accessible in external sequent node windows
+</LI>
+<LI>new menu item <KBD>Show selected</KBD>
 <P></P></LI>
 </UL>
 
@@ -197,7 +199,7 @@ far as possible)
 <HR noshade size=2>
 <FONT SIZE="-2">
 last changed on 
-<!-- hhmts start --> 1 Aug 2013
+<!-- hhmts start --> 3 Aug 2013
 <!-- hhmts end -->
 by <A HREF="/index.html.en">Hendrik</A>
 </FONT></BODY> </HTML>
