@@ -202,8 +202,11 @@ proof tree, no matter what happens with the original proof.
 .P
 The 
 .I Show current
-item moves the viewport to the proof tree such that the current
-proof goal (if there is any) will be visible.
+and
+.I Show selected
+items move the viewport of the proof tree such that the current
+proof goal, or, respectively, the selected node will be visible
+(if they exist).
 .\" ==========================================================================
 .P
 The
