@@ -1,5 +1,9 @@
 2013-08-03  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
+	* show selected menu entry
+
+2013-08-03  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
 	* update INSTALL, README; add compatibility file
 
 2013-08-03  Hendrik Tews  <tews@os.inf.tu-dresden.de>
